# apps/api/src/http/routes/index.ts
@@ -4,6 +4,7 @@ import { authenticateWithPassword } from './auth/authenticate-with-password'
 import { refreshToken } from './auth/refresh-token'
 import { verifyOPTCode } from './auth/verify-opt-code'
 import { healthCheck } from './health-check'
+import { organization } from './organizations'
 
 export async function routes(app: FastifyTypedInstance) {
   // app
@@ -13,4 +14,7 @@ export async function routes(app: FastifyTypedInstance) {
   authenticateWithPassword(app)
   verifyOPTCode(app)
   refreshToken(app)
+
+  // organization
+  organization(app)
 }
